--- a/emacs/config.org
+++ b/emacs/config.org
@@ -1275,6 +1275,8 @@ Return output file name."
     ;; https://emacs.stackexchange.com/a/18146
     (require 'bind-key)
     (unbind-key "C-c [" org-mode-map)
+    (unbind-key "C-c ," org-mode-map)
+    (bind-key "C-c ," 'org-time-stamp-inactive org-mode-map)
 
     (setcar org-emphasis-regexp-components " \t('\"{[:alpha:]")
     (setcar (nthcdr 1 org-emphasis-regexp-components) "[:alpha:]- \t.,:!?;'\")}\\")
@@ -1693,13 +1695,13 @@ Return output file name."
           (bind-key "C-c [" 'org-ref-insert-ref-link)
           (bind-key "C-c ]" 'org-ref-helm-insert-cite-link)))
 #+end_src
-*** COMMENT =org-download=
+*** =org-download=
 =org-download= allows you to do neat stuff like drag-and-drop images into an org-buffer to insert the image there!
 
 #+name: el-pkg-org-download
 #+begin_src emacs-lisp 
 (use-package org-download
-  :init (progn
+  :config (progn
           ;; don't want to use the sub-headings for the folder name
           ;; TODO: check if this actually work! Might be buffer-local, hence not do anything.
           (setq org-download-heading-lvl nil)
