--- a/emacs/config.org
+++ b/emacs/config.org
@@ -507,7 +507,7 @@ This means that if you have an Emacs daemon running on your computer you can sim
 
           ;; We can set major-modes for different domains!!!
           (setq edit-server-url-major-mode-alist
-                '(("github\\.com" . markdown-mode)))
+                '(("github\\.com" . poly-markdown-mode)))
           )
   )
 #+end_src
@@ -528,6 +528,16 @@ This means that if you have an Emacs daemon running on your computer you can sim
    (setq word-wrap nil)
    ;; Default to 100 linewidth in programming languages, because I like it.
    (set-fill-column 100)))
+#+end_src
+**** Markdown
+#+name: el-prog-markdown
+#+begin_src emacs-lisp 
+(use-package markdown-mode
+  :config (progn
+            (setq-default markdown-spaces-after-code-fence 0)))
+(use-package edit-indirect
+  :config (progn
+            (define-key edit-indirect-mode-map (kbd "C-c C-c") nil)))
 #+end_src
 **** C/C++
 #+name: el-prog-c-and-cplusplus
@@ -707,6 +717,36 @@ This means that if you have an Emacs daemon running on your computer you can sim
   :config (add-to-list 'company-backends 'company-go))
 (use-package company-go)
 #+end_src
+**** Jupyter
+#+name: el-prog-jupyter
+#+begin_src emacs-lisp 
+(use-package jupyter
+  :pin melpa
+  :after (polymode org)
+  :config (progn
+	    (setq org-babel-default-header-args:jupyter-julia '((:async . "yes")
+								(:session . "jl")
+								(:kernel . "julia-1.3")))
+	    (setq org-babel-default-header-args:jupyter-python '((:async . "yes")
+								 (:session . "py")
+								 (:kernel . "python3")))
+
+            ;; Set `polymode-eval-region-function' to `jupyter-eval-region'
+            ;; so we can evaluate in REPL using `M-n v v'.
+            (add-hook 'jupyter-repl-interaction-mode-hook #'poly-jupyter-mode-setup)
+            ;; Make the keybinding `C-c '' work INSIDE of the code blocks too.
+            ;; Combined with the above hook to `jupyter-repl-interaction', we can
+            ;; run `jupyter-run-repl' with the cursor inside a code-block to associate a
+            ;; buffer to all such code-blocks in this buffer. Then, to ensure that the indirect
+            ;; buffer opened using `iedit-indirect-region', we set `jupyter-current-client'
+            ;; to the value which it has in the innerchunk that we executed
+            ;; `markdown-edit-code-block' in.
+            (add-hook
+             'jupyter-repl-interaction-mode-hook
+             (lambda ()
+               (setq-local edit-indirect-after-creation-hook
+                           `(lambda () (setq jupyter-current-client ,jupyter-current-client)))))))
+#+end_src
 **** Julia
 #+name: el-prog-julia
 #+begin_src emacs-lisp 
@@ -725,7 +765,9 @@ This means that if you have an Emacs daemon running on your computer you can sim
   ;;   ;; (add-hook 'julia-mode #'ess-julia-mode)
   ;;   ;; overwrite this rebinding from `ess-julia-mode'
   ;;   ;; (bind-key "TAB" 'julia-latexsub-or-indent ess-julia-mode-map))
-    )
+  )
+
+(use-package julia-repl)
 #+end_src
 **** Web
 #+name: el-prog-web
@@ -1221,15 +1263,6 @@ Return output file name."
 ;;                             (kill-region (region-beginning) (region-end))
 ;;                             (goto-char start))))))
 (use-package ob-sql-mode)
-(use-package jupyter
-  :pin melpa
-  :config (progn
-	    (setq org-babel-default-header-args:jupyter-julia '((:async . "yes")
-								(:session . "jl")
-								(:kernel . "julia-1.3")))
-	    (setq org-babel-default-header-args:jupyter-python '((:async . "yes")
-								 (:session . "py")
-								 (:kernel . "python3")))))
 
 (use-package org
   :pin org
@@ -1763,6 +1796,40 @@ sudo apt-get install libnotify-bin
   :config (which-key-mode))
 #+end_src
 
+*** =polymode=
+#+name: el-pkg-polymode
+#+begin_src emacs-lisp 
+(use-package polymode)
+(use-package poly-markdown
+  :mode ("\\.[jJ]md" . poly-markdown-mode)
+  :bind (:map poly-markdown-mode-map
+              ("C-c '" . markdown-edit-code-block)))
+#+end_src
+
+**** Concepts
+- *span* is a contiugous and homogenous region of text of the /same/ major mode. There are 4 different types:
+  1. Head
+  2. Body
+  3. Tail
+  4. Host
+- *chunk* is a contiguous region that consists of one or more /spans/.
+  - There are two major types:
+    1. *host chunk* which contain only /one/ span in the /host/ major mode
+    2. *inner chunk* which consists of head, body and tail, where /body/ is of some other mode than host.
+  - Naming: =pm-XYZ-hostmode= and =pm-XYZ-innermode=
+- *Polymode*:
+  - Means one of the following:
+    1. a /sum/ of related functionality available in buffers
+    2. /function/ which installs a bunch of functioanlity into emacs buffers
+    3. an /object/ of class =pm-polymode= which holds the configuration for the polymode
+  - Naming: =polymode-XYZ-mode=
+  - Major and minor mode design:
+    - Most polymodes are designed to be used as major modes (i.e. in =auto-mode-alist= or buffer-local =mode:= cookie)
+    - Some polymodes (those with host's =:mode= slot set to =nil=) are explicitly designed to be used as minor modes.
+- *chunkmode* and the more specific *hostmode* and *innermode* mean either:
+  1. a /sum/ of related functionality in host and inner chunks
+  2. configuration /objects/ derived from =pm-chunkmode= class (i.e. =pm-host-hostmode=, =pm-inner-innermode=, =pm-inner-auto-chunkmode=)
+
 ** Theming
 #+name: el-theme
 #+begin_src emacs-lisp 
@@ -1997,9 +2064,13 @@ sudo apt-get install libnotify-bin
 
 <<el-prog-golang>>
 
+<<el-prog-jupyter>>
+
 <<el-prog-julia>>
 
 <<el-prog-web>>
+
+<<el-prog-markdown>>
 
 <<el-prog-R>>
 
